--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,18 @@ project(CriaturasPOO)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(CriaturasPOO main.cpp)
+add_executable(CriaturasPOO main.cpp
+        criatura.cpp
+        criatura.h
+        Nodo.cpp
+        Nodo.h
+        Metamorfita.cpp
+        Metamorfita.h
+        LentoDeRaiz.cpp
+        LentoDeRaiz.h
+        Albo.cpp
+        Albo.h
+        Mapa.cpp
+        Mapa.h
+        Centella.cpp
+        Centella.h)
